; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_pcie.c_mtk_pci_make_addr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_pcie.c_mtk_pci_make_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @mtk_pci_make_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_pci_make_addr(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = and i32 %10, 3840
  %12 = ashr i32 %11, 8
  %13 = shl i32 %12, 24
  %14 = load i32, i32* %5, align 4
  %15 = shl i32 %14, 16
  %16 = or i32 %13, %15
  %17 = load i32, i32* %6, align 4
  %18 = shl i32 %17, 11
  %19 = or i32 %16, %18
  %20 = load i32, i32* %7, align 4
  %21 = shl i32 %20, 8
  %22 = or i32 %19, %21
  %23 = load i32, i32* %8, align 4
  %24 = and i32 %23, 252
  %25 = or i32 %22, %24
  %26 = or i32 %25, -2147483648
  store i32 %26, i32* %9, align 4
  %27 = load i32, i32* %9, align 4
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
